# RAG_Powered_Chatbot_Backend

./: .env.sample  .gitignore  pyproject.toml
src/: app.py  config.py
src/api_models/: call_graph.py  call_graph_response.py  email_response.py  fetch_feedbacks_response.py  fetch_files_response.py  fetch_thread_messages_response.py  fetch_threads_response.py  login_response.py  response.py  send_otp.py  singup.py  update_password.py  verify_otp.py
src/controller/documents/: add_document.py  delete_document.py  user_documents.py
src/controller/graphs/: call_graph.py  fetch_files.py  fetch_thread_messages.py  resume_graph.py
src/controller/threads/: add_thread.py  delete_thread.py  fetch_feedbacks.py  fetch_threads.py
src/controller/user/: login_email.py  retrieve_access_token.py  send_otp.py  signup_email.py  update_password.py  upload_profile_pic.py  verify_otp.py
src/db_connection/: db_base.py
src/db_models/: __init__.py  feedback_thread_model.py  file_model.py  thread_model.py  user_model.py
src/files_to_load/: config_to_load.py
src/graph/: general_graph.py  main_graph.py  main_graph_tools.py  rag_graph.py
src/routes/: document_routes.py  graphs_routes.py  user_routes.py
src/utils/: bcrypt_password.py  delete_file_from_cloudinary.py  generate_otp.py  generate_tokens.py  graph_utils.py  send_mail.py  tokens_model.py  upload_file_on_cloudinary.py
